Fix arrow positioning on mobile

--- a/styles/scss/partials/_module.scss
+++ b/styles/scss/partials/_module.scss
@@ -44,6 +44,7 @@
   }
 
   @media screen and (max-width: 768px) {
+    position: static;
     height: 98%;
 
     .featherlight-inner {
